--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <img src="assets/images/AOT_House.jpg" alt="AOT House" />
         <p class="saveBtn">Save</p>
         <div class="bottom">
-          <p class="linkBtn">
+          <div class="linkBtn">
             <i class="fa-solid fa-arrow-up-right-from-square"></i
             ><a href="https://pin.it/7pCO9mYlN"> Attack On Titan</a>
-          </p>
+          </div>
           <p class="shareBtn">
             <i class="fa-solid fa-arrow-up-from-bracket"></i>
           </p>
